sandbox/output
Reorder.java:17: error: ')' expected
        if (!list.get(0).equals(list.get(1)) {
                                            ^
1 error
